<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Square Dance Dictionary v2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_call_list">CallList</string>
    <string name="title_activity_levels">Levels</string>
    <string name="title_activity_show">Show</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_search_results">SearchResults</string>
    <string name="author">Author:</string>
    <string name="level">Level:</string>
    <string name="search_prompt">Enter your search terms:</string>
    <string name="start">Start:</string>
    <string name="finish">End:</string>
    <string name="show_vic">Show on Vic Ceder\'s Site</string>
    <string name="show_tam">Show Tamination</string>
    <string name="show_mix">Show on Mixed-Up.com</string>
    <string name="main_caption">Square Dance Call Definitions</string>
    <string name="search">Search</string>
    <string name="search_now">Search Now</string>
    <string name="search_results">Search Results</string>
    <string name="search_terms_hint">Search Terms</string>
    <string name="choose_level_caption">Choose a level</string>
    <string name="more_info">More information about square dancing:</string>
    <string name="about_subhead">A dictionary of 1400 challenge level square dance calls from C1 through C4</string>
    <string name="title_activity_multi">Multi</string>
    <string name="title_activity_glossary">Glossary</string>
    <string name="caption_glossary">About These Lists</string>

</resources>
