<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Search" >

    <TextView
        android:id="@+id/txtMainCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/search"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtMainCaption"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:text="@string/search_prompt" />

    <EditText
        android:id="@+id/txtSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtPrompt"
        android:layout_marginTop="8sp"
        android:background="#ccc"
        android:ems="10"
        android:hint="@string/search_terms_hint"
        android:padding="8dp" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtSearch"
        android:layout_marginTop="8sp"
        android:onClick="onClickSearch"
        android:text="@string/search_now" />

</RelativeLayout>