<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".About" >

    <TextView
        android:id="@+id/txtMainCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/main_caption"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtSubHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMainCaption"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/about_subhead"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#00c"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtSubHead"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="Mark Brautigam" />

    <TextView
        android:id="@+id/txtMixed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/author"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:text="Mixed-Up Squares"
        android:textColor="#00c"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/txtClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtMore"
        android:layout_below="@+id/txtMixed"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="6dp"
        android:layout_centerHorizontal="true"
        android:text="CIS063 Android Programming" />

    <TextView
        android:id="@+id/txtMission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/author"
        android:layout_below="@+id/txtClass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:text="Mission College" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMission"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:text="23 March 2014" />

    <TextView
        android:id="@+id/txtMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/more_info" />

    <TextView
        android:id="@+id/txtUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:clickable="true"
        android:onClick="MixUrlClick"
        android:text="www.mixed-up.com"
        android:textColor="#00c"
        android:textStyle="italic" />

</RelativeLayout>